--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -1,8 +1,7 @@
-{% extends 'admin/dashboardbase.html' %}
-{% comment %} {% load static %} {% endcomment %}
+{% extends 'admin/dashboardbase.html' %} 
+{% load static %}
 {% block title %}dashboard{% endblock %}
 {% block body %}
-
 
 <div class="container-fluid">
     <!--  Row 1 -->
@@ -16,7 +15,6 @@
               </div>
               <div>
                 <div class="d-lg-flex">
-                   
                   <p id="current-date-time" class="text-dark font-weight-bold mb-0"></p>
                 </div>
                 
@@ -26,6 +24,7 @@
           </div>
         </div>
       </div>
+      
       <div class="col-lg-4">
         <div class="row">
           <div class="col-lg-12">
@@ -36,14 +35,7 @@
                 <div class="row align-items-center">
                   <div class="col-8">
                     <h4 class="fw-semibold mb-3"></h4>
-                    <!-- <div class="d-flex align-items-center mb-3">
-                      <span
-                        class="me-1 rounded-circle bg-light-success round-20 d-flex align-items-center justify-content-center">
-                        <i class="ti ti-arrow-up-left text-success"></i>
-                      </span>
-                      <p class="text-dark me-1 fs-3 mb-0"></p>
-                      <p class="fs-3 mb-0"></p>
-                    </div> -->
+
                     <div class="d-flex align-items-center">
                       <div class="me-4">
                         <span class="round-8 bg-success rounded-circle me-2 d-inline-block"></span>
@@ -60,6 +52,7 @@
                       </div>
                     </div>
                   </div>
+                  
                   <div class="col-4">
                     <div class="d-flex justify-content-center">
                       <div id="breakup"></div>
@@ -77,14 +70,7 @@
                   <div class="col-8">
                     <h5 class="card-title mb-9 fw-semibold"> TOTAL SALE </h5>
                     <h4 class="fw-semibold mb-3">${{totalsale}}</h4>
-                    <!-- <div class="d-flex align-items-center pb-1">
-                      <span
-                        class="me-2 rounded-circle bg-light-danger round-20 d-flex align-items-center justify-content-center">
-                        <i class="ti ti-arrow-down-right text-danger"></i>
-                      </span>
-                      <p class="text-dark me-1 fs-3 mb-0"></p>
-                      <p class="fs-3 mb-0"></p>
-                    </div> -->
+
                   </div>
                   <div class="col-4">
                     <div class="d-flex justify-content-end">
@@ -99,6 +85,7 @@
               <div id="earning"></div>
             </div>
           </div>
+          
           <div class="col-lg-12">
             <!-- Monthly Earnings -->
             <div class="card">
@@ -107,14 +94,14 @@
                   <div class="col-8">
                     <h5 class="card-title mb-9 fw-semibold"> TOTAL EARNINGS </h5>
                     <h4 class="fw-semibold mb-3">${{totalearnings}}</h4>
-                    <!-- <div class="d-flex align-items-center pb-1">
+                    {% comment %} <!-- <div class="d-flex align-items-center pb-1">
                       <span
                         class="me-2 rounded-circle bg-light-danger round-20 d-flex align-items-center justify-content-center">
                         <i class="ti ti-arrow-down-right text-danger"></i>
                       </span>
                       <p class="text-dark me-1 fs-3 mb-0"></p>
                       <p class="fs-3 mb-0"></p>
-                    </div> -->
+                    </div> --> {% endcomment %}
                   </div>
                   <div class="col-4">
                     <div class="d-flex justify-content-end">
@@ -232,10 +219,9 @@
   // Update the date and time every second
   setInterval(updateDateTime, 1000);
   
-  </script>
- <script>
+ </script>
+<script>
   $(function () {
-
     console.log('reachred hereeeeeeeeeeeeeeee')
     var sales_values = {{ sales_values|safe }};
     var return_values = {{ return_values|safe }};
