--- a/templates/user/userprofile/editprofile.html
+++ b/templates/user/userprofile/editprofile.html
@@ -62,7 +62,7 @@
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary btn-block"> Edit Profile </button>
                             </div> <!-- form-group// --><br>
-                            <a href="{% url 'editprofile' %}" class="btn btn-outline-primary-2"><i
+                            <a href="{% url 'userprofile' %}" class="btn btn-outline-primary-2"><i
                                 class="icon-long-arrow-left"></i><span>BACK</span></a>
 
                                 <a href="{% url 'changepassword' %}" class="btn btn-outline-primary-2"><span>Change Password </span><i
