--- a/templates/base.html
+++ b/templates/base.html
@@ -154,16 +154,10 @@
                                     
                                     <li><a href="{% url "wishlist" %}"><i class="icon-heart-o"></i>My Wishlist</a></li>
 
-                                    
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
                                     {% if user.is_authenticated %}
-                                    <li><a href="{% url 'logout' %}"><i class="icon-user"></i>Logout</a></li>
-
-                                    {% else %}
-                                    
-                                    <li><a href="{% url 'signin' %}"><i class="icon-user"></i>Login</a></li>
-
+                                        <li><a href="{% url 'logout' %}"><i class="icon-user"></i>Logout</a></li>
+                                        {% else %}
+                                        <li><a href="{% url 'signin' %}"><i class="icon-user"></i>Login</a></li>
                                     {% endif %}
                                 </ul>
                             </li>
@@ -235,7 +229,7 @@
                             </ul><!-- End .menu -->
                         </nav><!-- End .main-nav -->
 
-                        <div class="header-search">
+                        {% comment %} <div class="header-search">
                             <a href="#" class="search-toggle" role="button"><i class="icon-search"></i></a>
                             <form action="#" method="get">
                                 <div class="header-search-wrapper">
@@ -243,7 +237,7 @@
                                     <input type="search" class="form-control" name="q" id="q" placeholder="Search in..." required>
                                 </div><!-- End .header-search-wrapper -->
                             </form>
-                        </div><!-- End .header-search -->
+                        </div><!-- End .header-search --> {% endcomment %}
 
                         <div class="dropdown cart-dropdown">
                             <a href="{% url 'cart' %}" class="dropdown-toggle" role="button">
