--- a/templates/user/cart/cart.html
+++ b/templates/user/cart/cart.html
@@ -21,7 +21,7 @@
 <main class="main">
     <div class="page-header text-center">
         <div class="container">
-            <h1 class="page-title">Shopping Cart<span>Shop</span></h1>
+            <h1 class="page-title">Shopping Cart</h1>
         </div><!-- End .container -->
     </div><!-- End .page-header -->
     <nav aria-label="breadcrumb" class="breadcrumb-nav">
