--- a/templates/user/shop/shop.html
+++ b/templates/user/shop/shop.html
@@ -11,7 +11,7 @@
 <main class="main">
     <div class="page-header text-center" style="background-image: url('assets/images/page-header-bg.jpg')">
         <div class="container">
-            <h1 class="page-title">Boxed No Sidebar<span>Shop</span></h1>
+            <h1 class="page-title">Shop</h1>
         </div><!-- End .container -->
     </div><!-- End .page-header -->
     <nav aria-label="breadcrumb" class="breadcrumb-nav mb-2">
