--- a/templates/base.html
+++ b/templates/base.html
@@ -196,7 +196,7 @@
                                 </li> {% endcomment %}
                                 
                                 <li>
-                                    <a href="blog.html" class="sf-with-ul">Blog</a>
+                                    <a href="{% url "blog" %}" class="sf-with-ul">Blog</a>
                                 </li>
                                
                             </ul><!-- End .menu -->
