--- a/templates/user/blog/blog.html
+++ b/templates/user/blog/blog.html
@@ -14,7 +14,7 @@
             <nav aria-label="breadcrumb" class="breadcrumb-nav mb-3">
                 <div class="container">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                        <li class="breadcrumb-item"><a href="{% url "home" %}">Home</a></li>
                         <li class="breadcrumb-item"><a href="#">Blog</a></li>
                     </ol>
                 </div><!-- End .container -->
@@ -28,9 +28,8 @@
                                 <div class="entry-item col-sm-6">
                                     <article class="entry entry-grid text-center">
                                         <figure class="entry-media">
-                                            <a href="single.html">
+                                            <a href="#">
                                                 <img src="{% static 'template/assets/images/blog/masonry/with-sidebar/post-1.jpg' %}" alt="image desc">
-
                                             </a>
                                         </figure><!-- End .entry-media -->
 
@@ -45,7 +44,7 @@
                                             </div><!-- End .entry-meta -->
 
                                             <h2 class="entry-title">
-                                                <a href="single.html">Cras ornare tristique elit.</a>
+                                                <a href="#">Cras ornare tristique elit.</a>
                                             </h2><!-- End .entry-title -->
 
                                             <div class="entry-cats">
@@ -60,16 +59,15 @@
                                     <article class="entry entry-grid text-center">
                                         <figure class="entry-media">
                                             <div class="owl-carousel owl-simple owl-light owl-nav-inside" data-toggle="owl">
-                                                <a href="single.html">
+                                                <a href="#">
                                                     <img src="{% static 'template/assets/images/blog/masonry/with-sidebar/post-8.jpg' %}" alt="image desc">
                                                 </a>
-                                                <a href="single.html">
+                                                <a href="#">
                                                     <img src="{% static 'template/assets/images/blog/masonry/with-sidebar/post-8-2.jpg' %}" alt="image desc">
                                                 </a>
                                             </div><!-- End .owl-carousel -->
                                         </figure><!-- End .entry-media -->
 
-                                        {% comment %} <div class="entry-body"> {% endcomment %}
                                         <div class="entry-item col-sm-6">
                                             <div class="entry-meta">
                                                 <span class="entry-author">
@@ -82,7 +80,7 @@
                                             </div><!-- End .entry-meta -->
 
                                             <h2 class="entry-title">
-                                                <a href="single.html">Utaliquam sollicitudin leo.</a>
+                                                <a href="#">Utaliquam sollicitudin leo.</a>
                                             </h2><!-- End .entry-title -->
 
                                             <div class="entry-cats">
@@ -95,7 +93,7 @@
                                 <div class="entry-item col-sm-6">
                                     <article class="entry entry-grid text-center">
                                         <figure class="entry-media">
-                                            <a href="single.html">
+                                            <a href="#">
                                                 <img src="{% static 'template/assets/images/blog/masonry/with-sidebar/post-2.jpg' %}" alt="image desc">
                                             </a>
                                         </figure><!-- End .entry-media -->
@@ -111,7 +109,7 @@
                                             </div><!-- End .entry-meta -->
 
                                             <h2 class="entry-title">
-                                                <a href="single.html">Quisque volutpat mattiseros.</a>
+                                                <a href="#">Quisque volutpat mattiseros.</a>
                                             </h2><!-- End .entry-title -->
 
                                             <div class="entry-cats">
@@ -124,7 +122,7 @@
                                 <div class="entry-item col-sm-6">
                                     <article class="entry entry-grid text-center">
                                         <figure class="entry-media">
-                                            <a href="single.html">
+                                            <a href="#">
                                                 <img src="{% static 'template/assets/images/blog/masonry/with-sidebar/post-7.jpg' %}" alt="image desc">
                                             </a>
                                         </figure><!-- End .entry-media -->
@@ -141,7 +139,7 @@
                                             </div><!-- End .entry-meta -->
 
                                             <h2 class="entry-title">
-                                                <a href="single.html">Aenean dignissim pellente squefelis.</a>
+                                                <a href="#">Aenean dignissim pellente squefelis.</a>
                                             </h2><!-- End .entry-title -->
 
                                       
