--- a/templates/base.html
+++ b/templates/base.html
@@ -173,7 +173,7 @@
                             <i class="icon-bars"></i>
                         </button>
 
-                        <a href="index.html" class="logo">
+                        <a href="{% url "home" %}" class="logo">
                             <img src="{% static 'template/assets/images/demos/demo-10/logo.png' %}" alt="Molla Logo" width="105" height="25">
                         </a>
                     </div><!-- End .header-left -->
@@ -268,7 +268,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget widget-about">
-                                <img src="assets/images/demos/demo-10/logo-footer.png" class="footer-logo" alt="Footer Logo" width="105" height="25">
+                                <img src="{% static 'template/assets/images/demos/demo-10/logo-footer.png' %}" class="footer-logo" alt="Footer Logo" width="105" height="25">
                                 <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
 
                                 <div class="social-icons">
