--- a/templates/admin/dashboardbase.html
+++ b/templates/admin/dashboardbase.html
@@ -102,7 +102,7 @@
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
-          <a href="./index.html" class="text-nowrap logo-img">
+          <a href="#" class="text-nowrap logo-img">
             <img src="{% static 'dashboard/assets/images/logos/dark-logo.svg' %}" width="180" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
