--- a/templates/user/blog/blog.html
+++ b/templates/user/blog/blog.html
@@ -133,17 +133,18 @@
                                                     by <a href="#">John Doe</a>
                                                 </span>
                                                 <span class="meta-separator">|</span>
-                                                <a href="#">Nov 10, 2018</a>
+                                                <a href="#">Nov 21, 2018</a>
                                                 <span class="meta-separator">|</span>
-                                                {% comment %} <a href="#">4 Comments</a> {% endcomment %}
                                             </div><!-- End .entry-meta -->
 
                                             <h2 class="entry-title">
-                                                <a href="#">Aenean dignissim pellente squefelis.</a>
+                                                <a href="#">Quisque volutpat mattiseros.</a>
                                             </h2><!-- End .entry-title -->
 
-                                      
-                                        </div><!-- End .entry-body -->
+                                            <div class="entry-cats">
+                                                in <a href="#">Lifestyle</a>
+                                            </div><!-- End .entry-cats -->
+                                        </div><!-- End .entry-body --> 
                                     </article><!-- End .entry -->
                                 </div><!-- End .entry-item -->
 
