--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -17,10 +17,10 @@
                 <div class="d-lg-flex">
                   <p id="current-date-time" class="text-dark font-weight-bold mb-0"></p>
                 </div>
-                
               </div>
             </div>
             <div id="chart"></div>
+
           </div>
         </div>
       </div>
@@ -270,10 +270,11 @@
       borderColor: "rgba(0,0,0,0.1)",
       strokeDashArray: 3,
       xaxis: {
-        lines: {
-          show: false,
-        },
-      },
+              lines: 
+              {
+              show: false,
+              },
+            },
     },
 
     xaxis: {
