--- a/templates/base.html
+++ b/templates/base.html
@@ -174,7 +174,7 @@
                         </button>
 
                         <a href="{% url "home" %}" class="logo">
-                            <img src="{% static 'template/assets/images/demos/demo-10/logo.png' %}" alt="Molla Logo" width="105" height="25">
+                            <img src="{% static 'template/assets/images/icons/flex.png' %}" alt="Molla Logo" width="105" height="25">
                         </a>
                     </div><!-- End .header-left -->
 
@@ -268,7 +268,7 @@
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="widget widget-about">
-                                <img src="{% static 'template/assets/images/demos/demo-10/logo-footer.png' %}" class="footer-logo" alt="Footer Logo" width="105" height="25">
+                                <img src="{% static 'template/assets/images/icons/flexgrey.png' %}" class="footer-logo" alt="Footer Logo" width="105" height="25">
                                 <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. </p>
 
                                 <div class="social-icons">
@@ -322,7 +322,7 @@
 
             <div class="footer-bottom">
                 <div class="container">
-                    <p class="footer-copyright">Copyright © 2019 Molla Store. All Rights Reserved.</p><!-- End .footer-copyright -->
+                    <p class="footer-copyright">Copyright © 2019 Flex Store. All Rights Reserved.</p><!-- End .footer-copyright -->
                     <figure class="footer-payments">
                         <img src="{% static 'template/assets/images/payments.png' %}" alt="Payment methods" width="272" height="20">
                     </figure><!-- End .footer-payments -->
